--- a/Views/Citizenship/primerparcial/primerparcial.html
+++ b/Views/Citizenship/primerparcial/primerparcial.html
@@ -14,8 +14,8 @@
     <div class="center" style="color: white; font-family: iknowaghost;">
       
         <ol type="I">
-            <li class="zoom" onClick="window.open('../../../Assets/images/Door.png')">Ciudadanía y pertenencia</li>
-            <li class="zoom" onClick="window.open('../../../Assets/images/Door.png')">Ciudadanía y pertenenciaa</li>
+            <li class="zoom" onClick="window.open('./mapas/Tema_1.png')">La ciudad</li>
+            <li class="zoom" onClick="window.open('./mapas/Tema_2.png')">Perspectiva de género</li>
         </ol>
     </div>
 </body>
