--- a/Views/Citizenship/citizenship.html
+++ b/Views/Citizenship/citizenship.html
@@ -19,7 +19,13 @@
                         <a href="./primerparcial/primerparcial.html">
                             <img class="secretimg" src="../../Assets/images/Door_open.png" style="width: 100%; background-color: black;">
                         </a>
-
+                    </div>
+                </td>
+                <td>
+                    <div style="background-image: url('../../Assets/images/Door2.png'); width: 50vh; background-size: contain; color: aliceblue;">
+                        <a href="./segundoparcial/segundoparcial.html">
+                            <img class="secretimg" src="../../Assets/images/Door_open2.png" style="width: 100%; background-color: black;">
+                        </a>
                     </div>
                 </td>
             </tr>
