--- a/Views/Citizenship/citizenship.html
+++ b/Views/Citizenship/citizenship.html
@@ -28,6 +28,13 @@
                         </a>
                     </div>
                 </td>
+                <td>
+                    <div style="background-image: url('../../Assets/images/Door3.png'); width: 50vh; background-size: contain; color: aliceblue;">
+                        <a href="./tercerparcial/tercerparcial.html">
+                            <img class="secretimg" src="../../Assets/images/Door_open3.png" style="width: 100%; background-color: black;">
+                        </a>
+                    </div>
+                </td>
             </tr>
 
         </table>
